--- a/package.json
+++ b/package.json
@@ -28,5 +28,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "/home/joseph/Documents/curso-platzi/curso-react-intro/build"
 }
